update script logic for Jenkins 2