@@ -9,12 +9,14 @@
 #A script which bootstraps a Jenkins installation for executing Jervis Job DSL scripts
 
 #sane defaults
+export BOOTSTRAP_HOME="${BOOTSTRAP_HOME:-.}"
 export CURL="${CURL:-curl}"
-export JENKINS_HOME="${JENKINS_HOME:-my_jenkins_home}"
-export jenkins_url="${jenkins_url:-http://mirrors.jenkins-ci.org/war/latest/jenkins.war}"
+export JENKINS_HOME="${JENKINS_HOME:-../my_jenkins_home}"
 export JENKINS_WAR="${JENKINS_WAR:-jenkins.war}"
 export JENKINS_WEB="${JENKINS_WEB:-http://localhost:8080}"
-export BOOTSTRAP_HOME="${BOOTSTRAP_HOME:-.}"
+export jenkins_url="${jenkins_url:-http://mirrors.jenkins-ci.org/war/latest/jenkins.war}"
+#variables depending on above variables
+export JENKINS_START="${JENKINS_START:-java -Xms4g -Xmx4g -XX:MaxPermSize=512M -jar ${JENKINS_WAR}}"
 export SCRIPT_LIBRARY_PATH="${SCRIPT_LIBRARY_PATH:-${BOOTSTRAP_HOME}/scripts}"
 
 if [ -e "${SCRIPT_LIBRARY_PATH}/common.sh" ]; then
@@ -52,6 +54,17 @@ if ! "${SCRIPT_LIBRARY_PATH}/provision_jenkins.sh" status; then
 fi
 #wait for jenkins to become available
 "${SCRIPT_LIBRARY_PATH}/provision_jenkins.sh" url-ready "${JENKINS_WEB}/jnlpJars/jenkins-cli.jar"
+
+#try enabling authentication
+if is_auth_enabled; then
+  export CURL="${CURL} -u admin:$(<${JENKINS_HOME}/secrets/initialAdminPassword)"
+fi
+#try enabling CSRF protection support
+csrf_set_curl
+
+jenkins_console --script "${SCRIPT_LIBRARY_PATH}/console-skip-2.0-wizard.groovy"
+jenkins_console --script "${SCRIPT_LIBRARY_PATH}/configure-disable-usage-stats.groovy"
+
 #update and install plugins
 if [ "$1" = "update" ]; then
   echo "Bootstrap Jenkins via script console (may take a while without output)"
@@ -63,6 +76,12 @@ if $(CURL="${CURL} -s" jenkins_console --script "${SCRIPT_LIBRARY_PATH}/console-
   "${SCRIPT_LIBRARY_PATH}/provision_jenkins.sh" restart
   #wait for jenkins to become available
   "${SCRIPT_LIBRARY_PATH}/provision_jenkins.sh" url-ready "${JENKINS_WEB}/jnlpJars/jenkins-cli.jar"
+  #try enabling authentication
+  if is_auth_enabled; then
+    export CURL="${CURL} -u admin:$(<${JENKINS_HOME}/secrets/initialAdminPassword)"
+  fi
+  #try enabling CSRF protection support
+  csrf_set_curl
 fi
 #create jobs for testing
 create_job --job-name "Test" --xml-data "${BOOTSTRAP_HOME}/configs/job_Test_config.xml"
@@ -70,4 +89,9 @@ create_job --job-name "jervis" --xml-data "${BOOTSTRAP_HOME}/configs/job_jervis_
 create_job --job-name "slack-plugin" --xml-data "${BOOTSTRAP_HOME}/configs/job_slack-plugin_config.xml"
 jenkins_console --script "${SCRIPT_LIBRARY_PATH}/configure-markup-formatter.groovy"
 jenkins_console --script "${SCRIPT_LIBRARY_PATH}/configure-slack.groovy"
-echo 'Jenkins is ready.  Visit http://localhost:8080/'
+
+echo "Jenkins is ready.  Visit ${JENKINS_WEB}/"
+if is_auth_enabled &> /dev/null; then
+  echo "User: admin"
+  echo "Password: $(<"${JENKINS_HOME}"/secrets/initialAdminPassword)"
+fi
